src/app.scss
@import './vars';

// https://www.paulirish.com/2012/box-sizing-border-box-ftw/
html {
  box-sizing: border-box;
}

*,
*::before,
*::after {
  box-sizing: inherit;
}

body,
html,
#root {
  height: 100%;
}

body {
  font-family: 'Gotham SSm 7r', 'Gotham SSm A', 'Gotham SSm B', sans-serif;
  letter-spacing: 1px;
  margin: 0;
  max-width: 100%;
  padding: 0;
}

a {
  // Disable link underline
  text-decoration: none;

  &:hover {
    // Disable link underline
    text-decoration: none;
  }

  &:visited {
    // Keep link color the same after visiting it
    color: initial;
  }
}

.app-wrapper {
  display: flex;
  position: relative;
  width: 100%;
}

.app-main {
  height: calc(100vh - #{$header-height-xs});
  margin-top: $header-height-xs;
  overflow-y: auto;
  padding: 1rem 0.5rem;
  width: 100%;
  background-color: #ebeaea;
}
@media (min-width: $break-sm) {
  .app-main {
    height: calc(100vh - #{$header-height-sm});
    margin-top: $header-height-sm;
  }
}
@media (min-width: $break-md) {
  .app-main {
    margin-left: $drawer-width-md;
    padding: 1rem;
  }
}

strong {
  font-size: 15px;
  font-weight: bold;
  margin-top: 20px;
}

